# users_management

./: .gitignore  pyproject.toml
app/: __init__.py  __main__.py
app/config/: __init__.py  logging.py  settings.py
app/constans/: __init__.py  error_messages.py
app/controllers/: __init__.py  addresses.py  users.py
app/decorators/: __init__.py
app/decorators/users/: __init__.py  query_params.py  request_validation.py
app/exceptions/: __init__.py  base.py  body_exceptions.py  database_exceptions.py  query_params_exceptions.py  user_exceptions.py
app/handlers/: __init__.py  handlers.py
app/models/: __init__.py  address.py  user.py
app/routes/: __init__.py
app/routes/api/: __init__.py  addresses.py  users.py
app/routes/main/: __init__.py  root.py
app/schemas/: __init__.py
app/schemas/addresses/: __init__.py  create_address.py
app/schemas/users/: __init__.py  create_user.py  update_status_user.py  update_user.py
test/: conftest.py  pytest.ini
test/functional/: conftest.py  test_db_models.py
test/unit/app/: test___main__.py
test/unit/app/config/: test___init__.py  test_logging.py
test/unit/app/constans/: test_error_messages.py
test/unit/app/controllers/: test_addresses.py  test_users.py
test/unit/app/decorators/users/: test_query_params.py  test_requests_validation.py
test/unit/app/exceptions/: test_base.py  test_body_exceptions.py  test_database_exceptions.py  test_query_params_exceptions.py  test_user_exceptions.py
test/unit/app/handlers/: test_handlers.py
test/unit/app/models/: test_address.py  test_user.py
(+7 files in other folders)
